BUGFIX: mocha install in yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - "$HOME/.npm"
 install:
   - npm install nyc -g
-  - npm install mocha -g
+  - npm install mocha axios
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
